[gd_scene load_steps=19 format=3 uid="uid://cheig05iifyqy"]

[ext_resource type="Script" path="res://Scripts/chess_board.gd" id="1_ck71c"]
[ext_resource type="Texture2D" uid="uid://djfw2if6yw2l0" path="res://Sprites/ChessBoard.png" id="1_h6t5c"]
[ext_resource type="PackedScene" uid="uid://ckygw5034xawn" path="res://Scenes/Mouses/gray_mouse.tscn" id="2_2l0wm"]
[ext_resource type="PackedScene" uid="uid://283buij3sjwm" path="res://Scenes/Figures/rock_black.tscn" id="3_u1eov"]
[ext_resource type="PackedScene" uid="uid://dqt2j3hgjrcf4" path="res://Scenes/Mouses/brown_mouse.tscn" id="3_w31v2"]
[ext_resource type="Script" path="res://Scripts/cell.gd" id="3_wjdlc"]
[ext_resource type="PackedScene" uid="uid://btclthit0ctju" path="res://Scenes/Figures/horse_black.tscn" id="4_hwk85"]
[ext_resource type="PackedScene" uid="uid://dibsmwhc3i56o" path="res://Scenes/Mouses/judge_mouse.tscn" id="4_i1uyp"]
[ext_resource type="PackedScene" uid="uid://bsyp1c5ebk53c" path="res://Scenes/Figures/rock_white.tscn" id="4_p4xfb"]
[ext_resource type="PackedScene" uid="uid://bb0oxrxattn5x" path="res://Scenes/Figures/horse_white.tscn" id="5_l2y7h"]
[ext_resource type="PackedScene" uid="uid://b376la5s155y1" path="res://Scenes/Figures/beshop_black.tscn" id="5_sx80y"]
[ext_resource type="PackedScene" uid="uid://c30f172t36rm6" path="res://Scenes/Figures/beshop_white.tscn" id="6_8lyxy"]
[ext_resource type="Texture2D" uid="uid://bldeggm8k6bcy" path="res://Sprites/UICursor.png" id="6_dwhqj"]
[ext_resource type="PackedScene" uid="uid://ds7kyfukxk3bv" path="res://Scenes/Figures/queen_black.tscn" id="6_i0hx3"]
[ext_resource type="Texture2D" uid="uid://fs4n21srtfsu" path="res://Sprites/Hand.png" id="7_2pfl2"]
[ext_resource type="PackedScene" uid="uid://p1rylkxq7amh" path="res://Scenes/Figures/queen_white.tscn" id="7_03t1i"]
[ext_resource type="PackedScene" uid="uid://b2xd1cd3l3gvp" path="res://Scenes/Figures/king_black.tscn" id="7_lgcyi"]
[ext_resource type="PackedScene" uid="uid://b2bkjiuxc02lm" path="res://Scenes/Figures/king_white.tscn" id="8_qvv2p"]

[node name="Chess board" type="Node2D"]
script = ExtResource("1_ck71c")

[node name="Board sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_h6t5c")
centered = false

[node name="Board" type="GridContainer" parent="."]
offset_left = 555.0
offset_top = 143.0
offset_right = 1355.0
offset_bottom = 943.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="1" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Rock black" parent="Board/1" instance=ExtResource("3_u1eov")]

[node name="2" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("3_wjdlc")

[node name="Horse black" parent="Board/2" instance=ExtResource("4_hwk85")]

[node name="3" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Beshop black" parent="Board/3" instance=ExtResource("5_sx80y")]

[node name="4" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Queen black" parent="Board/4" instance=ExtResource("6_i0hx3")]

[node name="5" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="King black" parent="Board/5" instance=ExtResource("7_lgcyi")]

[node name="6" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Beshop black" parent="Board/6" instance=ExtResource("5_sx80y")]

[node name="7" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Horse black" parent="Board/7" instance=ExtResource("4_hwk85")]

[node name="8" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Rock black" parent="Board/8" instance=ExtResource("3_u1eov")]

[node name="9" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="10" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="11" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="12" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="13" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="14" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="15" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="16" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="17" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="18" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="19" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="20" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="21" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="22" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="23" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="24" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="25" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="26" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="27" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="28" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="29" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="30" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="31" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="32" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="33" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="34" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="35" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="36" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="37" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="38" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="39" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="40" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="41" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="42" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="43" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="44" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="45" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="46" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="47" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="48" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="49" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="50" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="51" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="52" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="53" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="54" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="55" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="56" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="57" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Rock white" parent="Board/57" instance=ExtResource("4_p4xfb")]

[node name="58" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Horse white" parent="Board/58" instance=ExtResource("5_l2y7h")]

[node name="59" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Beshop white" parent="Board/59" instance=ExtResource("6_8lyxy")]

[node name="60" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Queen white" parent="Board/60" instance=ExtResource("7_03t1i")]

[node name="61" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="King white" parent="Board/61" instance=ExtResource("8_qvv2p")]

[node name="62" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Beshop white" parent="Board/62" instance=ExtResource("6_8lyxy")]

[node name="63" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Horse white" parent="Board/63" instance=ExtResource("5_l2y7h")]

[node name="64" type="Control" parent="Board"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("3_wjdlc")

[node name="Rock white" parent="Board/64" instance=ExtResource("4_p4xfb")]

[node name="Cursors" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 606.0
offset_top = 193.0
offset_right = 606.0
offset_bottom = 193.0
mouse_filter = 2

[node name="CellCursor" type="Sprite2D" parent="Cursors"]
z_index = 1
texture = ExtResource("6_dwhqj")
region_enabled = true
region_rect = Rect2(0, 0, 97, 100)

[node name="Hand" type="Sprite2D" parent="Cursors"]
z_index = 3
position = Vector2(484, 637)
texture = ExtResource("7_2pfl2")
offset = Vector2(52, 250)

[node name="StepCursors" type="Control" parent="Cursors"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Mouses" type="Node2D" parent="."]

[node name="Gray mouse" parent="Mouses" instance=ExtResource("2_2l0wm")]
position = Vector2(455, 729)

[node name="Gray mouse2" parent="Mouses" instance=ExtResource("2_2l0wm")]
position = Vector2(1600, 827)

[node name="Gray mouse3" parent="Mouses" instance=ExtResource("2_2l0wm")]
position = Vector2(1846, 553)

[node name="Brown mouse" parent="Mouses" instance=ExtResource("3_w31v2")]
position = Vector2(430, 313)

[node name="Brown mouse2" parent="Mouses" instance=ExtResource("3_w31v2")]
position = Vector2(1606, 629)

[node name="Judge mouse" parent="Mouses" instance=ExtResource("4_i1uyp")]
position = Vector2(1796, 365)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_ai_step_timer_timeout"]
